--- a/templates/index.jade
+++ b/templates/index.jade
@@ -16,6 +16,10 @@ block content
     |  for the next event.
   section#event
     h2 Next event:
-    h3 Tuesday, March 8th, 2016 - 6:30pm to 8:30pm
-      em  Nodebots Office Hours
+    h3 Tuesday, March 8th, 2016 - 6:30pm to 8:30pm  
+      em Nodebots Office Hours
+    h4 605 5th Ave South, Suite 400
+      br
+      | Seattle, WA 98104 
     p Do you need a little help getting up and running with Nodebots? Bring your own hardware and we'll help you get set up! There will be no presentations; just some folks hanging out to help you get unblocked.
+    a(href="https://www.eventbrite.com/e/nodebots-office-hours-tickets-21699218948") Please RSVP - space is limited.
