--- a/templates/layout.jade
+++ b/templates/layout.jade
@@ -38,6 +38,9 @@ html(lang="en")
         include j5.svg
     footer(class="bg-black white py2 px3")
       p(class="m0")
+        a(href="https://twitter.com/nodebotssea") Nodebots Seattle
+          | on Twitter
+      p(class="m0")
         | Nodebots Seattle expects all attendees, speakers, sponsors and volunteers to follow the 
         a(class="yellow" href="http://confcodeofconduct.com/" target="_blank") Conference Code of Conduct
         | .  We expect cooperation from all participants to creatie a safe environment for everybody.
