fixing urls to be relative so they load when the site is being served by github

--- a/templates/layout.jade
+++ b/templates/layout.jade
@@ -7,7 +7,7 @@ html(lang="en")
     title(Nodebots Seattle)
     meta(name="description" content="Nodebots Seattle is a meetup for hardware and JavaScript enthusiasts and hackers of all skill levels.")
     link(href="http://d2v52k3cl9vedd.cloudfront.net/basscss/7.0.4/basscss.min.css" rel="stylesheet")
-    link(rel="shortcut icon" href="/img/favicon.png")
+    link(rel="shortcut icon" href="img/favicon.png")
     style
       | .bg-yellow {
       |  background-color: #F8E01E;
@@ -26,7 +26,7 @@ html(lang="en")
       |  /*filter: sepia(.3) contrast(1.1) brightness(1.1) grayscale(1);*/
       | }
   body
-    header(class="center bg-yellow py4 inkwell" style="background-image: url(/img/header-image.jpg); background-size: cover; background-position: center 43%;")
+    header(class="center bg-yellow py4 inkwell" style="background-image: url(img/header-image.jpg); background-size: cover; background-position: center 43%;")
       h1(class="m0 xl px2 inline-block" style="background: rgba(255, 255, 255, 0.5);") Nodebots Seattle
     section(id="bot-container" class="relative center")
       include logo.svg
@@ -50,4 +50,4 @@ html(lang="en")
         | . Header photograph by 
         a(class="yellow" href="https://www.flickr.com/photos/anotherangle/8426879052/in/photolist-dQDXy9-8UJz5J-8LXwgK-qQ6P9y-puD1bn-dsWWLt") Michael Muraz
         | .
-    script(type="text/javascript" src="/js/main.js")
+    script(type="text/javascript" src="js/main.js")
